RESOLVED FIXED136301
REGRESSION(r172946): Plugin tests asserting on Yosemite debug bot
https://bugs.webkit.org/show_bug.cgi?id=136301
Summary REGRESSION(r172946): Plugin tests asserting on Yosemite debug bot
Antti Koivisto
Reported 2014-08-27 12:44:21 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000001067b8cca WTFCrash + 42 1 com.apple.WebCore 0x000000010b8653a9 WebCore::ResourceLoadScheduler::scheduleLoad(WebCore::ResourceLoader*) + 329 2 com.apple.WebCore 0x000000010b8654ed WebCore::ResourceLoadScheduler::schedulePluginStreamLoad(WebCore::Frame*, WebCore::NetscapePlugInStreamLoaderClient*, WebCore::ResourceRequest const&) + 109 3 com.apple.WebKitLegacy 0x00000001110a85f3 WebKit::HostedNetscapePluginStream::start() + 419 4 com.apple.WebKitLegacy 0x00000001110c442d WebKit::NetscapePluginInstanceProxy::loadRequest(NSURLRequest*, char const*, bool, unsigned int&) + 1549 5 com.apple.WebKitLegacy 0x00000001110c3df7 WebKit::NetscapePluginInstanceProxy::loadURL(char const*, char const*, char const*, unsigned int, LoadURLFlags, unsigned int&) + 2087 6 com.apple.WebKitLegacy 0x00000001110b1837 WKPCLoadURL + 439 7 com.apple.WebKitLegacy 0x00000001111c9527 _XPCLoadURL + 215 8 com.apple.WebKitLegacy 0x00000001111cb40c WebKitPluginClient_server + 236 9 com.apple.WebKitLegacy 0x00000001110b1398 WebKit::NetscapePluginHostProxy::processRequests() + 440 10 com.apple.WebKitLegacy 0x00000001110c579d WebKit::NetscapePluginInstanceProxy::processRequestsAndWaitForReply(unsigned int) + 1101 11 com.apple.WebKitLegacy 0x00000001110ad05a std::__1::unique_ptr<WebKit::NetscapePluginInstanceProxy::InstantiatePluginReply, std::__1::default_delete<WebKit::NetscapePluginInstanceProxy::InstantiatePluginReply> > WebKit::NetscapePluginInstanceProxy::waitForReply<WebKit::NetscapePluginInstanceProxy::InstantiatePluginReply>(unsigned int) + 122 12 com.apple.WebKitLegacy 0x00000001110ac442 WebKit::NetscapePluginHostManager::instantiatePlugin(WTF::String const&, int, WTF::String const&, WebHostedNetscapePluginView*, NSString*, NSArray*, NSArray*, NSString*, NSURL*, bool, bool, bool, bool) + 2770 13 com.apple.WebKitLegacy 0x0000000111187188 -[WebHostedNetscapePluginView createPlugin] + 920
Attachments
patch (2.81 KB, patch)
2014-08-27 12:47 PDT, Antti Koivisto
ap: review+
Antti Koivisto
Comment 1 2014-08-27 12:47:42 PDT
Antti Koivisto
Comment 2 2014-08-27 14:18:07 PDT
Note You need to log in before you can comment on or make changes to this bug.