REGRESSION(r172946): Plugin tests asserting on Yosemite debug bot https://bugs.webkit.org/show_bug.cgi?id=136301

Reviewed by Alexey Proskuryakov.

Don't pull the priority from the platform request if it is not defined.

* platform/network/cf/ResourceRequestCFNet.cpp:
(WebCore::ResourceRequest::doUpdateResourceRequest):
* platform/network/cocoa/ResourceRequestCocoa.mm:
(WebCore::ResourceRequest::doUpdateResourceRequest):



Canonical link: https://commits.webkit.org/154123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173017 268f45cc-cd09-0410-ab3c-d52691b4dbfc